# esp32_cardemo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
components/485servo/: 485servo.c  CMakeLists.txt  README.md
components/ble/: CMakeLists.txt  README.md  ble.c
components/board_config/: CMakeLists.txt  README.md  board_config.c  gpio_manager.c
components/buzzer/: CMakeLists.txt  README.md  buzzer.c
components/camera_protocol/: CHANGELOG.md  CMakeLists.txt  README.md  USAGE.md  camera_protocol.c
components/dht11/: CMakeLists.txt  README.md  dht11.c
components/display_task/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  display_task.c
components/display_task/include/: display_task.h
components/encoder/: CMakeLists.txt  README.md  encoder.c
components/five_way_gray_i2c/: CMakeLists.txt  README.md  five_way_gray_i2c.c
components/gray_sensor/: CMakeLists.txt  README.md  gray_sensor.c
components/hc-sr04/: CMakeLists.txt  README.md  hc_sr04.c
components/i2c/: CMakeLists.txt  README.md  mpu_i2c.c  vl53l0_i2c.c
components/ir_obstacle/: CMakeLists.txt  README.md  ir_obstacle.c
components/key/: CMakeLists.txt  README.md  key.c
components/led/: CMakeLists.txt  README.md  led.c
components/mpu_6050/: CMakeLists.txt  README.md  mpu60xx.c
components/pcf8574/: CMakeLists.txt  README.md  pcf8574.c
components/pcf_buzzer/: CMakeLists.txt  README.md  pcf_buzzer.c
components/pd_controller/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  pd_controller.c
components/pwm/: CMakeLists.txt  README.md  pwm.c
components/servo_task/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  servo_task.c
components/spiflash/: CMakeLists.txt  README.md  spiflash.c
components/ssax1/: CMakeLists.txt  README.md  ssax1.c
components/ssdx/: CMakeLists.txt  README.md  ssdx.c
components/tcp/: CMakeLists.txt  README.md  tcp.c
components/timer_system/: CMakeLists.txt  QUICK_REFERENCE.md  README.md  timer_system.c
components/tm1637/: CMakeLists.txt  README.md  tm1637.c
components/tm1640/: CMakeLists.txt  README.md  tm1640.c
components/traffic_light/: CMakeLists.txt  README.md  traffic_light.c
components/turn_detector/: CMakeLists.txt  (+3 more)
components/voice_module/: CMakeLists.txt  Kconfig  README.md  example_integration.c  voice_module.c
components/voice_module/include/: voice_module.h
docs/: ARCHIVE_SUMMARY.md  COMPONENTS_README_TASK_LIST.md  CONFIGURATION_GUIDE.md  DOCUMENTATION_CHECKLIST.md  GPIO_PIN_ALLOCATION.md  GPIO_QUICK_REFERENCE.md  GPIO_SUMMARY.md  HARDWARE_SCHEMATICS.md  IMPORTANT_NOTES.md  PROGRAM_DESIGN.md  README.md  TURN_RESPONSE_DELAY_ANALYSIS.md  code_comment_validation_report.md  component_doc_validation_report.md  final_validation_report.md  format_validation_report.md  link_validation_report.md
main/: CMakeLists.txt  CMakeLists_calibration.txt  FIVE_WAY_GRAY_TEST_README.md  GRAY_CALIBRATION_README.md  PCF8574_TEST_README.md  TESTS_INDEX.md  TM1640_TEST_README.md  WIRELESS_TEST_README.md  gpio_drive_test.c  gray_calibration_test.c  idf_component.yml  line_following.c  main.c  main_adc_sampling_test.c  main_cartest.c  main_display_test.c  main_gpio_drive_test.c  main_integrated.c  main_integrated_test.c  main_multitask.c  main_pcf8574_test.c  main_pd_test.c  main_sensor_test_multitask.c  main_servo_test.c  main_spiflash_test.c  main_statemachine_test.c  main_timer_test.c  main_timer_watchdog_example.c  main_tm1640_test.c  main_turn_detector_test.c  main_voice_test.c  main_wireless_test.c  sensor_test_multitask.c
main/backup/: CMakeLists.txt.20260524_spiflash.bak  CMakeLists.txt.bak  MAIN_INTEGRATED_QUICK_REFERENCE.md.bak  TASK16_1_IMPLEMENTATION_SUMMARY.md.bak  TASK16_2_HARDWARE_TEST_GUIDE.md.bak  TASK16_3_STABILITY_TEST_GUIDE.md.bak  gpio_drive_test.c.bak  hello_world_main.c.bak.bak  line_following.c.bak  line_following.h.bak  main.c.bak  main_adc_sampling_test.c.bak  main_cartest.c.bak  main_copy.c.bak.bak  main_diagnostic.c.bak.bak  main_display_test.c.bak  main_integrated.c.bak  main_integrated_test.c.bak  main_line_following_example.c.bak.bak  main_multitask.c.bak  main_pd_test.c.bak  main_statemachine_test.c.bak  main_test_no_turn_detect.c.bak.bak  main_turn_detector_test.c.bak  main_voice_test.c.bak  main_watchdog_fix.c.bak.bak  power_test.c.bak.bak  sensor_test.c.bak.bak  sensor_test_multitask.c.bak  turn_detection.c.bak  turn_detection.h.bak
(+65 files in other folders)
